--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,11 @@
     "graphql": "^14.5.6",
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.1",
+    "styled-components": "^5.0.1",
     "typescript": "3.6.3"
   },
   "scripts": {
@@ -47,6 +49,7 @@
     "@graphql-codegen/typescript-react-apollo": "1.7.0",
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^2.2.1",
-    "@types/react-router-dom": "^4.3.5"
+    "@types/react-router-dom": "^4.3.5",
+    "@types/styled-components": "^4.4.2"
   }
 }
