--- a/web/package.json
+++ b/web/package.json
@@ -50,6 +50,7 @@
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/react-router-dom": "^4.3.5",
-    "@types/styled-components": "^4.4.2"
+    "@types/styled-components": "^4.4.2",
+    "graphql-toolkit": "^0.7.5"
   }
 }
