--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.9.0",
     "apollo-boost": "^0.4.4",
     "apollo-link-token-refresh": "^0.2.6",
+    "axios": "^0.19.2",
     "graphql": "^14.5.6",
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
