--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
+    "@bit/lodash.lodash.has-in": "^4.17.11",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
@@ -13,6 +14,7 @@
     "axios": "^0.19.2",
     "graphql": "^14.5.6",
     "jwt-decode": "^2.2.0",
+    "neverthrow": "^2.1.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
