--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,9 @@
     "apollo-boost": "^0.4.4",
     "apollo-link-token-refresh": "^0.2.6",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "graphql": "^14.5.6",
     "jwt-decode": "^2.2.0",
-    "neverthrow": "^2.1.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
