--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "apollo-link-token-refresh": "^0.2.6",
     "axios": "^0.19.2",
     "graphql": "^14.5.6",
+    "graphql-tag": "^2.10.3",
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
