--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
+    "@bit/lodash.lodash.clone-deep": "^4.17.11",
     "@bit/lodash.lodash.has-in": "^4.17.11",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
@@ -18,6 +19,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.1",
     "styled-components": "^5.0.1",
