--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-tag-autocomplete": "^5.12.0",
     "apollo-boost": "^0.4.4",
     "apollo-link-token-refresh": "^0.2.6",
     "axios": "^0.19.2",
@@ -22,6 +23,7 @@
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.1",
+    "react-tag-autocomplete": "^5.12.1",
     "styled-components": "^5.0.1",
     "typescript": "3.6.3"
   },
