--- a/web/package.json
+++ b/web/package.json
@@ -10,13 +10,13 @@
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
-    "@types/react-tag-autocomplete": "^5.12.0",
     "apollo-boost": "^0.4.4",
     "apollo-link-token-refresh": "^0.2.6",
     "axios": "^0.19.2",
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.3",
     "jwt-decode": "^2.2.0",
+    "nanoid": "^2.1.11",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
@@ -56,7 +56,9 @@
     "@graphql-codegen/typescript-react-apollo": "1.7.0",
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/nanoid": "^2.1.0",
     "@types/react-router-dom": "^4.3.5",
+    "@types/react-tag-autocomplete": "^5.12.0",
     "@types/styled-components": "^4.4.2",
     "graphql-toolkit": "^0.7.5"
   }
