--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,11 @@
     "apollo-boost": "^0.4.4",
     "apollo-link-token-refresh": "^0.2.6",
     "axios": "^0.19.2",
+    "downshift": "^5.0.5",
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.3",
     "jwt-decode": "^2.2.0",
+    "lodash.debounce": "^4.0.8",
     "nanoid": "^2.1.11",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -56,6 +58,7 @@
     "@graphql-codegen/typescript-react-apollo": "1.7.0",
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/nanoid": "^2.1.0",
     "@types/react-router-dom": "^4.3.5",
     "@types/react-tag-autocomplete": "^5.12.0",
