--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
     "react-icons": "^3.9.0",
+    "react-lazy-load-image-component": "^1.4.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.1",
     "react-tag-autocomplete": "^5.12.1",
@@ -60,6 +61,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash.debounce": "^4.0.6",
     "@types/nanoid": "^2.1.0",
+    "@types/react-lazy-load-image-component": "^1.3.0",
     "@types/react-router-dom": "^4.3.5",
     "@types/react-tag-autocomplete": "^5.12.0",
     "@types/styled-components": "^4.4.2",
