--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.9.0",
     "react-icons": "^3.9.0",
     "react-lazy-load-image-component": "^1.4.1",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.1",
     "react-tag-autocomplete": "^5.12.1",
@@ -62,6 +63,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/nanoid": "^2.1.0",
     "@types/react-lazy-load-image-component": "^1.3.0",
+    "@types/react-modal": "^3.10.5",
     "@types/react-router-dom": "^4.3.5",
     "@types/react-tag-autocomplete": "^5.12.0",
     "@types/styled-components": "^4.4.2",
