--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,7 @@
     "lodash.debounce": "^4.0.8",
     "nanoid": "^2.1.11",
     "react": "^16.9.0",
-    "react-autocomplete": "^1.8.1",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
     "react-icons": "^3.9.0",
@@ -63,7 +63,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash.debounce": "^4.0.6",
     "@types/nanoid": "^2.1.0",
-    "@types/react-autocomplete": "^1.8.5",
+    "@types/react-autosuggest": "^9.3.13",
     "@types/react-lazy-load-image-component": "^1.3.0",
     "@types/react-modal": "^3.10.5",
     "@types/react-router-dom": "^4.3.5",
