--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.1",
     "react-tag-autocomplete": "^5.12.1",
+    "react-toast-notifications": "^2.4.0",
     "styled-components": "^5.0.1",
     "typescript": "3.6.3"
   },
@@ -70,6 +71,7 @@
     "@types/react-modal": "^3.10.5",
     "@types/react-router-dom": "^4.3.5",
     "@types/react-tag-autocomplete": "^5.12.0",
+    "@types/react-toast-notifications": "^2.4.0",
     "@types/styled-components": "^4.4.2",
     "graphql-toolkit": "^0.7.5"
   }
