--- a/web/package.json
+++ b/web/package.json
@@ -73,6 +73,7 @@
     "@types/react-tag-autocomplete": "^5.12.0",
     "@types/react-toast-notifications": "^2.4.0",
     "@types/styled-components": "^4.4.2",
+    "eslint-config-react-app": "^5.2.1",
     "graphql-toolkit": "^0.7.5"
   }
 }
