--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "build-ts": "tsc",
     "postinstall": "yarn build-ts",
     "start:dev": "concurrently \"nodemon --exec ts-node src/index.ts\" \"yarn client\"",
-    "client": "cd ../web && yarn start",
-    "build": "cd ../web && yarn build",
+    "client": "cd ./web && yarn start",
+    "build": "cd ./web && yarn build",
     "heroku-postbuild": "yarn build"
   }
 }
