--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "server",
   "version": "0.0.1",
   "description": "EatIt!",
+  "engines": {
+    "node": "12.16.x"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
