--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,9 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.16.x"
+  },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
     "@bit/lodash.lodash.clone-deep": "^4.17.11",
