--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postinstall": "yarn build-ts",
     "start:dev": "concurrently \"nodemon --exec ts-node src/index.ts\" \"yarn client\"",
     "client": "cd ./web && yarn start",
+    "install": "cd ./web && yarn install",
     "build": "cd ./web && yarn build",
     "heroku-postbuild": "yarn build"
   }
