--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "12.16.x"
+    "node": "12.x"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
@@ -13,6 +13,18 @@
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/classnames": "^2.2.10",
+    "@types/graphql": "^14.5.0",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/nanoid": "^2.1.0",
+    "@types/react-autosuggest": "^9.3.13",
+    "@types/react-lazy-load-image-component": "^1.3.0",
+    "@types/react-modal": "^3.10.5",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/react-tag-autocomplete": "^5.12.0",
+    "@types/react-toast-notifications": "^2.4.0",
+    "@types/styled-components": "^4.4.2",
     "apollo-boost": "^0.4.4",
     "apollo-link-token-refresh": "^0.2.6",
     "axios": "^0.19.2",
