--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "graphql": "^14.5.6",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.3.0",
+    "pg-connection-string": "^2.2.0",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^0.17.5",
     "typeorm": "^0.2.21"
