--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "start:dev": "concurrently \"nodemon --exec ts-node src/index.ts\" \"yarn client\"",
     "client": "cd ./web && yarn start",
     "install": "cd ./web && yarn install",
-    "build": "cd ./web && yarn build",
-    "heroku-postbuild": "yarn build"
+    "build:client": "cd ./web && yarn build",
+    "heroku-postbuild": "yarn build:client"
   }
 }
