--- a/web/package.json
+++ b/web/package.json
@@ -9,16 +9,18 @@
     "@apollo/react-hooks": "^3.1.1",
     "@bit/lodash.lodash.clone-deep": "^4.17.11",
     "@bit/lodash.lodash.has-in": "^4.17.11",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
     "@types/classnames": "^2.2.10",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "24.0.18",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash.uniqwith": "^4.5.6",
     "@types/nanoid": "^2.1.0",
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
     "@types/react-autosuggest": "^9.3.13",
+    "@types/react-dom": "16.9.0",
     "@types/react-lazy-load-image-component": "^1.3.0",
     "@types/react-modal": "^3.10.5",
     "@types/react-router-dom": "^4.3.5",
@@ -34,6 +36,8 @@
     "graphql-tag": "^2.10.3",
     "jwt-decode": "^2.2.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
+    "lodash.uniqwith": "^4.5.0",
     "nanoid": "^2.1.11",
     "react": "^16.9.0",
     "react-autosuggest": "^9.4.3",
